--- a/Perceptron/Single perceptron.ipynb
+++ b/Perceptron/Single perceptron.ipynb
@@ -30,15 +30,15 @@
     "        self.weights = np.zeros((num_input_neurons, num_middle_neurons))\n",
     "\n",
     "        for i in range(0, num_input_neurons):\n",
-    "            for x in range(0, self.num_middle_neurons):\n",
-    "                self.weights[i][x] = random.random()*2-1\n",
+    "            for j in range(0, self.num_middle_neurons):\n",
+    "                self.weights[i][j] = random.random()*2-1\n",
     "    \n",
     "    def feed_forward(self, inputs):\n",
     "        sum = 0\n",
     "        \n",
     "        for i in range(0, len(inputs)):\n",
-    "            for x in range(0, self.num_middle_neurons):\n",
-    "                sum += self.weights[i][x] * inputs[i]\n",
+    "            for j in range(0, self.num_middle_neurons):\n",
+    "                sum += self.weights[i][j] * inputs[i]\n",
     "            \n",
     "        return self.activate('sigmoid', sum)\n",
     "    \n",
@@ -57,8 +57,8 @@
     "        error = desired_output - guess\n",
     "        \n",
     "        for i in range(0, len(inputs)):\n",
-    "            for x in range(0, self.num_middle_neurons):\n",
-    "                self.weights[i][x] += error * inputs[i] * self.speed"
+    "            for j in range(0, self.num_middle_neurons):\n",
+    "                self.weights[i][j] += error * inputs[i] * self.speed"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
