--- a/Perceptron/Multilayer perceptron.ipynb
+++ b/Perceptron/Multilayer perceptron.ipynb
@@ -32,13 +32,13 @@
     "        self.middle_weights = np.zeros((num_layers, num_middle_neurons, num_middle_neurons))\n",
     "        \n",
     "        for i in range(0, num_input_neurons):\n",
-    "            for x in range(0, self.num_middle_neurons):\n",
-    "                self.weights[i][x] = random.random()*2-1\n",
+    "            for j in range(0, self.num_middle_neurons):\n",
+    "                self.weights[i][j] = random.random()*2-1\n",
     "                \n",
     "        for l in range(0, num_layers):\n",
     "            for i in range(0, num_middle_neurons):\n",
-    "                for x in range(0, num_middle_neurons):\n",
-    "                    self.middle_weights[l][i][x] = random.random()*2-1\n",
+    "                for j in range(0, num_middle_neurons):\n",
+    "                    self.middle_weights[l][i][j] = random.random()*2-1\n",
     "    \n",
     "    def feed_forward(self, inputs):\n",
     "        sum = 0\n",
@@ -49,16 +49,16 @@
     "#                 sum += self.weights[i][x] * inputs[i]\n",
     "            \n",
     "#         sum = 0\n",
-    "        for x in range(0, self.num_middle_neurons):\n",
+    "        for j in range(0, self.num_middle_neurons):\n",
     "            for i in range(0, len(inputs)):\n",
-    "                sum += self.weights[i][x] * inputs[i]\n",
-    "            sum_middle[x] = sum\n",
+    "                sum += self.weights[i][j] * inputs[i]\n",
+    "            sum_middle[j] = sum\n",
     "            sum = 0\n",
     "        \n",
     "        for l in range(0, self.num_layers):\n",
     "            for i in range(0, self.num_middle_neurons):\n",
-    "                for x in range(0, self.num_middle_neurons):\n",
-    "                    sum += self.middle_weights[l][i][x] * sum_middle[x]                \n",
+    "                for j in range(0, self.num_middle_neurons):\n",
+    "                    sum += self.middle_weights[l][i][j] * sum_middle[j]                \n",
     "        \n",
     "        return self.activate('step', sum)\n",
     "    \n",
@@ -77,8 +77,8 @@
     "        error = desired_output - guess\n",
     "        \n",
     "        for i in range(0, len(inputs)):\n",
-    "            for x in range(0, self.num_middle_neurons):\n",
-    "                self.weights[i][x] += error * inputs[i] * self.speed"
+    "            for j in range(0, self.num_middle_neurons):\n",
+    "                self.weights[i][j] += error * inputs[i] * self.speed"
    ]
   },
   {
@@ -110,8 +110,6 @@
     "                answer = -1\n",
     "                self.perceptron.train([x_coord, y_coord], answer)\n",
     "                \n",
-    "#             if x % 100000 == 0:\n",
-    "#                 print(self.perceptron.error)\n",
     "        return self.perceptron"
    ]
   },
@@ -188,22 +186,22 @@
    "source": [
     "weights = np.zeros((2, 3))\n",
     "for i in range(0, 2):\n",
-    "    for x in range(0, 3):\n",
-    "        weights[i][x] = random.random()*2-1\n",
+    "    for j in range(0, 3):\n",
+    "        weights[i][j] = random.random()*2-1\n",
     "\n",
     "inputs = [-7,9]\n",
     "sum = 0\n",
     "sum_middle = np.zeros((3, 1))\n",
     "\n",
-    "for x in range(0, 3):\n",
+    "for j in range(0, 3):\n",
     "    for i in range(0, len(inputs)):\n",
-    "        sum += weights[i][x] * inputs[i]\n",
-    "    sum_middle[x] = sum\n",
+    "        sum += weights[i][j] * inputs[i]\n",
+    "    sum_middle[j] = sum\n",
     "    sum = 0\n",
     "    \n",
     "for i in range(0, len(inputs)):\n",
-    "    for x in range(0, 3):\n",
-    "        weights[i][x] = weights[i][x] * inputs[i]\n",
+    "    for j in range(0, 3):\n",
+    "        weights[i][j] = weights[i][j] * inputs[i]\n",
     "\n",
     "print(sum_middle, '\\n', weights)"
    ]
@@ -262,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
