--- a/Hopfield/Hopfield.ipynb
+++ b/Hopfield/Hopfield.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -25,14 +25,15 @@
     "    def __init__(self, num_neurons):\n",
     "        self.num_neurons = num_neurons \n",
     "        self.weights = np.zeros((num_neurons, num_neurons))\n",
+    "        self.sample = []\n",
     "        self.iter = 0\n",
     "        \n",
     "    def feed_forward(self, inputs):\n",
+    "        self.sample.append(inputs)\n",
     "        for i in range(0, self.num_neurons):\n",
     "            for j in range(0, self.num_neurons):\n",
     "                if not i == j:\n",
     "                    self.weights[i][j] += inputs[i] * inputs[j]\n",
-    "#         self.weights = inputs.dot(inputs)\n",
     "    \n",
     "    def activate(self, num):\n",
     "        if num > 0:\n",
@@ -44,77 +45,98 @@
     "            self.feed_forward(i)\n",
     "        \n",
     "    def predict(self, inputs):\n",
-    "        result = inputs\n",
-    "        while (self.iter < 20000):\n",
-    "            for i in range(0, self.num_neurons):\n",
-    "                for j in range(0, self.num_neurons):\n",
-    "                    if not result[i] == self.weights[i][j]:\n",
-    "                        continue\n",
+    "        while (self.iter < 10000):\n",
+    "            for sample in self.sample:\n",
+    "                if (inputs == sample).all():\n",
+    "                    return inputs\n",
     "            \n",
     "            sum = 0\n",
     "            r = random.choice(range(self.num_neurons))\n",
     "            for i in range(0, self.num_neurons):\n",
-    "                sum += self.weights[i][r] * result[i]\n",
-    "            result[r] = self.activate(sum)\n",
+    "                sum += self.weights[i][r] * inputs[i]\n",
+    "            inputs[r] = self.activate(sum)\n",
     "            \n",
     "            self.iter += 1\n",
-    "        return result"
+    "        return inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Потребовалось 113 итераций.\n",
+      "1 0 0 0 0 0 1 \n",
+      "1 0 0 0 1 1 0 \n",
+      "1 0 0 1 0 0 0 \n",
+      "1 1 1 0 0 0 0 \n",
+      "1 0 0 1 0 0 0 \n",
+      "1 0 0 0 1 1 0 \n",
+      "1 0 0 0 0 0 1 \n"
+     ]
+    }
+   ],
    "source": [
-    "reference1 = np.array([[0,1,1,1,1,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0]])\n",
-    "reference2 = np.array([[1,1,1,1,1,1,1],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0]])\n",
-    "reference3 = np.array([[1,0,0,0,0,0,1],\n",
-    "                      [1,0,0,0,1,1,0],\n",
-    "                      [1,0,0,1,0,0,0],\n",
-    "                      [1,1,1,0,0,0,0],\n",
-    "                      [1,0,0,1,0,0,0],\n",
-    "                      [1,0,0,0,1,1,0],\n",
-    "                      [1,0,0,0,0,0,1]])\n",
+    "reference1 = np.array([-1,1,1,1,1,1,-1,\n",
+    "                      -1,1,-1,-1,-1,1,-1,\n",
+    "                      -1,1,-1,-1,-1,1,-1,\n",
+    "                      -1,1,-1,-1,-1,1,-1,\n",
+    "                      -1,1,-1,-1,-1,1,-1,\n",
+    "                      -1,1,-1,-1,-1,1,-1,\n",
+    "                      -1,1,-1,-1,-1,1,-1])\n",
+    "reference2 = np.array([1,1,1,1,1,1,1,\n",
+    "                      -1,-1,-1,1,-1,-1,-1,\n",
+    "                      -1,-1,-1,1,-1,-1,-1,\n",
+    "                      -1,-1,-1,1,-1,-1,-1,\n",
+    "                      -1,-1,-1,1,-1,-1,-1,\n",
+    "                      -1,-1,-1,1,-1,-1,-1,\n",
+    "                      -1,-1,-1,1,-1,-1,-1])\n",
+    "reference3 = np.array([1,-1,-1,-1,-1,-1,1,\n",
+    "                      1,-1,-1,-1,1,1,-1,\n",
+    "                      1,-1,-1,1,-1,-1,-1,\n",
+    "                      1,1,1,-1,-1,-1,-1,\n",
+    "                      1,-1,-1,1,-1,-1,-1,\n",
+    "                      1,-1,-1,-1,1,1,-1,\n",
+    "                      1,-1,-1,-1,-1,-1,1])\n",
     "\n",
     "references = np.array([reference1, reference2, reference3])\n",
+    "num_neurons = len(references[0])\n",
     "\n",
-    "net_hopfield = Hopfield(7)\n",
+    "net_hopfield = Hopfield(num_neurons)\n",
     "net_hopfield.train(references)\n",
     "\n",
-    "spoiled_reference = np.array([[1,1,0,0,0,0,0],\n",
-    "                      [1,0,0,0,1,1,0],\n",
-    "                      [1,0,0,1,0,0,0],\n",
-    "                      [0,0,1,0,0,0,0],\n",
-    "                      [1,0,0,1,0,0,0],\n",
-    "                      [1,0,0,0,1,1,0],\n",
-    "                      [1,1,0,0,0,0,1]])\n",
+    "spoiled_reference = np.array([1,1,-1,-1,-1,-1,-1,\n",
+    "                              1,-1,-1,-1,1,1,-1,\n",
+    "                              1,-1,-1,1,-1,-1,-1,\n",
+    "                              -1,-1,1,-1,-1,-1,-1,\n",
+    "                              1,-1,-1,1,-1,-1,-1,\n",
+    "                              1,-1,-1,-1,1,1,-1,\n",
+    "                              1,1,-1,-1,-1,-1,1])\n",
     "\n",
-    "#predict = net_hopfield.predict(spoiled_reference)\n",
     "net_hopfield.predict(spoiled_reference)\n",
     "\n",
     "print(\"Потребовалось {} итераций.\".format(net_hopfield.iter))\n",
-    "print(spoiled_reference, end='')"
+    "# print(spoiled_reference, end='')\n",
+    "\n",
+    "k = 0\n",
+    "result = np.zeros((7, 7))\n",
+    "for i in range(0, 7):\n",
+    "    for j in range(0, 7):\n",
+    "        if spoiled_reference[k] == -1:\n",
+    "            result[i][j] = 0\n",
+    "        else:\n",
+    "            result[i][j] = 1\n",
+    "        k += 1\n",
+    "        \n",
+    "for i in range(0, 7):\n",
+    "    for j in range(0, 7):\n",
+    "        print(int(result[i][j]), end=' ')\n",
+    "    print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -127,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Потребовалось 20000 итераций.\n",
+      "Потребовалось 3 итераций.\n",
       "[ 1 -1  1  1]"
      ]
     }
@@ -151,7 +173,6 @@
     "\n",
     "spoiled_reference = np.array([1,-1,1,-1])\n",
     "\n",
-    "#predict = net_hopfield.predict(spoiled_reference)\n",
     "net_hopfield.predict(spoiled_reference)\n",
     "\n",
     "print(\"Потребовалось {} итераций.\".format(net_hopfield.iter))\n",
@@ -160,227 +181,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0., -3.,  3.,  1.],\n",
-       "       [-3.,  0., -3., -1.],\n",
-       "       [ 3., -3.,  0.,  1.],\n",
-       "       [ 1., -1.,  1.,  0.]])"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "net_hopfield.weights"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 1 1 1 1 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]]\n",
-      "[[0 1 1 1 1 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]]\n",
-      "[[0 1 1 1 1 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]\n",
-      " [0 1 0 0 0 1 0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "reference1 = np.array([[0,1,1,1,1,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0]])\n",
-    "reference2 = np.array([[0,1,1,1,1,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0]])\n",
-    "reference3 = np.array([[0,1,1,1,1,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0]])\n",
-    "\n",
-    "references = np.array([reference1, reference2, reference3])\n",
-    "for reference in references:\n",
-    "    print(reference)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reference1 = np.array([0,1,1,1,1,1,0,\n",
-    "#                       0,1,0,0,0,1,0,\n",
-    "#                       0,1,0,0,0,1,0,\n",
-    "#                       0,1,0,0,0,1,0,\n",
-    "#                       0,1,0,0,0,1,0,\n",
-    "#                       0,1,0,0,0,1,0,\n",
-    "#                       0,1,0,0,0,1,0])\n",
-    "# reference2 = np.array([1,1,1,1,1,1,1,\n",
-    "#                       0,0,0,1,0,0,0,\n",
-    "#                       0,0,0,1,0,0,0,\n",
-    "#                       0,0,0,1,0,0,0,\n",
-    "#                       0,0,0,1,0,0,0,\n",
-    "#                       0,0,0,1,0,0,0,\n",
-    "#                       0,0,0,1,0,0,0])\n",
-    "# reference3 = np.array([1,0,0,0,0,0,1,\n",
-    "#                       1,0,0,0,1,1,0,\n",
-    "#                       1,0,0,1,0,0,0,\n",
-    "#                       1,1,1,0,0,0,0,\n",
-    "#                       1,0,0,1,0,0,0,\n",
-    "#                       1,0,0,0,1,1,0,\n",
-    "#                       1,0,0,0,0,0,1])\n",
-    "\n",
-    "reference1 = np.array([[0,1,1,1,1,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0],\n",
-    "                      [0,1,0,0,0,1,0]])\n",
-    "reference2 = np.array([[1,1,1,1,1,1,1],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0],\n",
-    "                      [0,0,0,1,0,0,0]])\n",
-    "reference3 = np.array([[1,0,0,0,0,0,1],\n",
-    "                      [1,0,0,0,1,1,0],\n",
-    "                      [1,0,0,1,0,0,0],\n",
-    "                      [1,1,1,0,0,0,0],\n",
-    "                      [1,0,0,1,0,0,0],\n",
-    "                      [1,0,0,0,1,1,0],\n",
-    "                      [1,0,0,0,0,0,1]])\n",
-    "\n",
-    "references = np.array([reference1, reference2, reference3])\n",
-    "\n",
-    "net_hopfield = Hopfield(7)\n",
-    "net_hopfield.train(references)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0.,  0.,  0.,  0.,  0.,  1.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  1.,  0.],\n",
-       "       [ 0.,  0.,  0.,  1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  1.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 0.,  1.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 1.,  0.,  0.,  0.,  0.,  0.,  0.]])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "net_hopfield.weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "spoiled_reference2 = [\n",
-    "        1,1,0,0,0,0,0,\n",
-    "        1,0,0,0,1,1,0,\n",
-    "        1,0,0,1,0,0,0,\n",
-    "        0,0,1,0,0,0,0,\n",
-    "        1,0,0,1,0,0,0,\n",
-    "        1,0,0,0,1,1,0,\n",
-    "        1,1,0,0,0,0,1\n",
-    "    ]\n",
-    "print(spoiled_reference2, end='')"
-   ]
   }
  ],
  "metadata": {
